syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "ProximitySync";

package proximity_updater;


// The greeting service definition.
service ProximityUpdater {
  // sends new players positions to all clients
  rpc UpdatePlayers(google.protobuf.Empty) returns (stream Players);
}

message Players{
	repeated Player players = 1;
}

message Player{
	string name = 1;
	Position2D position = 2;
}

message Position2D{
	double x = 1;
	double y = 2;
}